<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@drawable/logo2">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/TextInputEditTextFirstName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:hint="@string/prompt_First_Name"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColorHint="#170C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/TextInputEditTextLastName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/prompt_Last_Name"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColorHint="#170C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputEditTextFirstName"/>



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/TextInputEditTextMobileNumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/prompt_MobileNumber"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textColorHint="#170C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputEditTextLastName">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/TextInputEditTextEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/prompt_Email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColorHint="#170C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputEditTextMobileNumber" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/TextInputEditTextPassWord"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColorHint="#170C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputEditTextEmail" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/TextInputEditTextReEnterPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/prompt_confirmPassword"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColorHint="#170C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputEditTextPassWord" />


    <Button
        android:id="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register Now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputEditTextReEnterPassword"
        app:layout_constraintVertical_bias="0.264" />

    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/action_Sign_in"
        android:textColor="#100E0E"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReg"
        app:layout_constraintVertical_bias="0.419" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        android:text="Sign In"
        app:layout_constraintStart_toEndOf="@+id/txtView"
        app:layout_constraintTop_toBottomOf="@+id/btnReg" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_Welcome"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/TextInputEditTextFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_exa"
        android:text="@string/prompt_Register"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/txtWarnFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="8dp"
        android:text="Enter First Name"
        android:textColor="#DD0D0D"
        app:layout_constraintBottom_toTopOf="@+id/TextInputEditTextLastName"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/TextInputEditTextFirstName" />

    <TextView
        android:id="@+id/txtWarnLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="8dp"
        android:text="Enter Last Name"
        android:textColor="#DD0D0D"
        app:layout_constraintBottom_toTopOf="@+id/TextInputEditTextMobileNumber"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/TextInputEditTextLastName" />

    <TextView
        android:id="@+id/txtWarnMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="8dp"
        android:text="Enter Mobile Number"
        android:textColor="#DD0D0D"
        app:layout_constraintBottom_toTopOf="@+id/TextInputEditTextEmail"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/TextInputEditTextMobileNumber" />

    <TextView
        android:id="@+id/txtWarnEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="8dp"
        android:text="Enter Email"
        android:textColor="#DD0D0D"
        app:layout_constraintBottom_toTopOf="@+id/TextInputEditTextPassWord"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/TextInputEditTextEmail" />

    <TextView
        android:id="@+id/txtWarnPassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="8dp"
        android:text="Enter Password"
        android:textColor="#DD0D0D"
        app:layout_constraintBottom_toTopOf="@+id/TextInputEditTextReEnterPassword"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/TextInputEditTextPassWord" />

    <TextView
        android:id="@+id/txtWarnConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="8dp"
        android:text="Enter Confirm Password"
        android:textColor="#DD0D0D"
        app:layout_constraintBottom_toTopOf="@+id/btnReg"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/TextInputEditTextReEnterPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>